<resources>
    <string name="app_name">CRM</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_data_swap">DataSwapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_user_report">UserReportActivity</string>
    <string name="mobile_no">Mobile No</string>
    <string name="otp">Get OTP</string>
    <string name="sign_in">Sign In</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_employee_dash">EmployeeDash</string>
    <string name="bio_security">Bio Security</string>
    <string name="bioSecurityMsg">Bio Security is important for your data security.</string>
    <string name="bio_screen_msg">Data Security is important for your data security.</string>
    <string name="resetDevMsg">"Are you sure reset user device? "</string>
    <string name="account_status">Account Status</string>
    <string name="f_o"><![CDATA[F&O]]></string>
    <string name="employee">Employee</string>
    <string name="add_employee">Add Employee</string>
    <string name="search">Search</string>
    <string name="employee_details">Employee Details</string>
    <string name="employee_profile">Employee Profile</string>
    <string name="camera_button">Camera Icon</string>
    <string name="name">Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="salutation">Salutation :</string>
    <string name="employee_name">Employee Name :</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name_visibility">Middle Name Visibility</string>
    <string name="mob_no">Mobile No :</string>
    <string name="email_id">Email Id</string>
    <string name="e_id">Email Id :</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="calender_view">Calender View</string>
    <string name="addr">Address :</string>
    <string name="address">Address</string>
    <string name="b_name">Bank Name :</string>
    <string name="bank_name">Bank Name</string>
    <string name="accno">Account No :</string>
    <string name="account_no">Account No</string>
    <string name="panno">PAN no :</string>
    <string name="pan_no">PAN No.</string>
    <string name="bloodgroup">Blood Group :</string>
    <string name="blood_group">Blood Group</string>
    <string name="joining_job_details">Joining Job Details</string>
    <string name="job_details">Job Details</string>
    <string name="emp_id">Employee Id :</string>
    <string name="jobtitle">Job Title :</string>
    <string name="job_title">Job Title</string>
    <string name="join_date">Joining Date :</string>
    <string name="join_package">Joining Package :</string>
    <string name="joining_package">Joining Package</string>
    <string name="app_access">App Access</string>
    <string name="department">Department :</string>
    <string name="dept">Department</string>
    <string name="submit">Submit</string>
    <string name="user_type">User Type</string>
    <string name="select_role">Select Role</string>
    <string name="current_job_details">Current Job Details</string>
    <string name="currentpackage">Current Package :</string>
    <string name="current_package">Current Package</string>
    <string name="documents">Documents</string>
    <string name="employee_dp">Employee DP</string>
    <string name="update_employee_details">Update Employee Details</string>
    <string name="bot">BOT</string>
    <string name="whatsapp_bot">WhatsApp Bot</string>
    <string name="call_bot">Call Bot</string>
    <string name="messaging_platform">Messaging Platform</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="telegram">Telegram</string>
    <string name="email">Email</string>
    <string name="integrations">Integrations</string>
    <string name="tab_of_data_types">Tab of Data types</string>
    <string name="raw_data">Raw Data</string>
    <string name="add_raw_data">Add Raw Data</string>
    <string name="data_campaign_name">Data Campaign name :</string>
    <string name="data_campaign_details">Data Campaign Details :</string>
    <string name="data_campaign_file">Data Campaign File :</string>
    <string name="click_here_to_select_file">Click Here to Select File</string>
    <string name="data_campaign_data_type">Data Campaign Data Type :</string>
    <string name="total_data_count">Total Data Count :</string>
    <string name="cold_raw_data">Cold Raw Data</string>
    <string name="interested">Interested :</string>
    <string name="zero">0</string>
    <string name="not_interested">Not Interested:</string>
    <string name="not_responding">Not Responding:</string>
    <string name="paid">Paid:</string>
    <string name="warm_raw_data">Warm Raw Data</string>
    <string name="hot_raw_data">Hot Raw Data</string>
    <string name="delete_campaign">Delete Campaign</string>
    <string name="show_data">Show Data</string>
    <string name="_01_01_1111">01-01-1111</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="followup_date">Followup Date</string>
    <string name="raw_data_count">Raw Data Count :</string>
    <string name="configuration">Configuration</string>
    <string name="comment_configuration">Comment Configuration</string>
    <string name="dashboard_configuration">Dashboard Configuration</string>
    <string name="email_configuration">Email Configuration</string>
    <string name="comment_template">Comment Template :</string>
    <string name="please_add_new_line_for_new_template">(Please add new line for new template)</string>
    <string name="prospect_sub_type">Prospect Sub-Type :</string>
    <string name="prospect_type">Prospect Type :</string>
    <string name="not_interested_paid_interested_are_by_default">( \'Not Interested\', \'Paid\', \'Interested\' are by default)</string>
    <string name="na_white_is_by_default_value"> (NA,White)  is by default value.</string>
    <string name="please_add_prospect_type_in_new_line">Please Add Prospect type in new line :</string>
    <string name="for_remove_prospect_subtype_please_hold_long_press">For remove prospect subtype, please hold long press.</string>
    <string name="add_sub_type">Add Sub-Type</string>
    <string name="update">Update</string>
    <string name="color_code">Color Code :</string>
    <string name="prospect_s_type">Prospect Sub Type</string>
    <string name="host">Host :</string>
    <string name="port">Port :</string>
    <string name="password">Password:</string>
    <string name="email_account_configuration">Email Account Configuration</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>


</resources>