<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/email_account_configuration"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host"
            android:inputType="textWebEditText"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:autofillHints="name"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:maxLength="4"
            android:autofillHints="creditCardNumber"
            android:minHeight="48dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_id"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:minHeight="48dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:autofillHints="emailAddress"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >
            <ImageButton
                android:id="@+id/btnTogglePassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_visibility_off_24"
                android:contentDescription="@string/toggle_password_visibility"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/password"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:autofillHints="password"
                android:textSize="14sp"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>