<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_campaign_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/cmpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_campaign_name"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:autofillHints="name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_campaign_details"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/cmpDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_campaign_details"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:autofillHints="name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_campaign_data_type"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinData"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/data_type"
            android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_campaign_file"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/cmpFile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/click_here_to_select_file"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    </LinearLayout>


</LinearLayout>

