<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".integration.CommentConfActivity"
    android:background="#6FE6E6E5"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/comment_configuration"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginVertical="20dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_template"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_add_new_line_for_new_template"
                android:textSize="12sp"
                android:textColor="#B2212222"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/commentTemplate"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:scrollbarSize="10dp"
                android:hint="@string/comment_template"
                android:gravity="top"
                android:autofillHints="name"
                android:padding="10dp"
                android:inputType="textMultiLine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prospect_sub_type"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_remove_prospect_subtype_please_hold_long_press"
                android:textSize="12sp"
                android:textColor="#B2212222"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordered_background">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    tools:listitem="@layout/layout_pros_sub_type"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/na_white_is_by_default_value"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textColor="#B2212222"
                    android:textStyle="bold"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAdd"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_back_btn_blue"
                    android:text="@string/add_sub_type"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_add_prospect_type_in_new_line"
                android:textSize="12sp"
                android:textColor="#B2212222"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prospect_type"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/prosType"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:scrollbarSize="10dp"
                android:hint="@string/prospect_type"
                android:gravity="top"
                android:autofillHints="name"
                android:padding="10dp"
                android:inputType="textMultiLine"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_interested_paid_interested_are_by_default"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:textColor="#B2212222"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rounded_back_btn_blue"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>


        </LinearLayout>
    </ScrollView>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressbar"
        style="@style/SpinKitView.ChasingDots"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/regocolor" />

</RelativeLayout>