<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/prospect_sub_type"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/subType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:autofillHints="name"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:hint="@string/prospect_s_type"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/color_code"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <View
        android:id="@+id/colorView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#B2D5D6D6"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>